src/test/deca/codegen/valid/Objets/08test_new2.deca
class A {
    int x = 0;
    int y = 0;
}

{
    int x = 1;
    int y = 1;
    A a = new A() ;
    println(x);
    println(a.x);
}