src/test/deca/codegen/invalid/Objets/02ModBy0Ret.deca
class A {
    boolean b;

    int get0() {
        return 0;
    }
}

{
    A a = new A();
    int x = 5;

    println(x % a.get0());
}